some improvements for chat and other